blog: fix h1 layout on mobile

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -47,6 +47,7 @@ pre {
 
         h1 {
             font-size: 32px;
+            line-height: 32px;
             text-transform: none;
             margin-top: 20px;
             margin-bottom: 7px;
